@@ -12,6 +12,9 @@
     <description>A Mule module for connectivity using TLS/SSL authentication.</description>
 
     <properties>
+        <!-- TODO W-13145677 Make the add-opens specific to 'org.mule.test.unit' instead of ALL-UNNAMED --> 
+        <surefire.args>${surefire.args.base} --add-opens java.base/java.lang=ALL-UNNAMED</surefire.args>
+
         <javaModuleName>org.mule.runtime.tls</javaModuleName>
         <formatterConfigPath>../../formatter.xml</formatterConfigPath>
     </properties>
